SERVER-15329 add a short sleep if our handshake is rejected because we are not in the current config