src/mongo/db/repl/sync_source_feedback.cpp
@@ -118,11 +118,21 @@ namespace repl {
                 LOG(2) << "Sending to " << _connection.get()->toString() << " the replication "
                         "handshake: " << *it;
                 if (!_connection->runCommand("admin", *it, res)) {
+                    std::string errMsg = res["errmsg"].valuestrsafe();
                     massert(17447, "upstream updater is not supported by the member from which we"
                             " are syncing, please update all nodes to 2.6 or later.",
-                            res["errmsg"].str().find("no such cmd") == std::string::npos);
+                            errMsg.find("no such cmd") == std::string::npos);
+
                     log() << "replSet error while handshaking the upstream updater: "
-                        << res["errmsg"].valuestrsafe();
+                        << errMsg;
+
+                    // sleep half a second if we are not in our sync source's config
+                    // TODO(dannenberg) after 2.8, remove the string comparison 
+                    if (res["code"].numberInt() == ErrorCodes::NodeNotFound ||
+                            errMsg.find("could not be found in replica set config while attempting "
+                                        "to associate it with") != std::string::npos) {
+                        sleepmillis(500);
+                    }
 
                     _resetConnection();
                     return false;
